--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ charset-normalizer==3.4.0
 click==8.1.7
 dnspython==2.7.0
 Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
+greenlet==3.1.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
@@ -11,5 +13,7 @@ MarkupSafe==3.0.2
 psycopg2-binary==2.9.10
 pymongo==4.10.1
 requests==2.32.3
+SQLAlchemy==2.0.36
+typing_extensions==4.12.2
 urllib3==2.2.3
 Werkzeug==3.1.3
